objects/copado__Scratch_Org_Definition__c.object
<CustomObject>
    <fields>
        <fullName>copado__Developer_Hub_Org__c</fullName>
        <label>Developer Hub Org</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Scratch Org Definitions</relationshipLabel>
        <relationshipName>Scratch_Org_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Duration_in_days__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Duration in days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Scratch_Org_Definition_JSON__c</fullName>
        <label>Scratch Org Definition JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scratch Org Definition</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>copado__Developer_Hub_Org__c</columns>
        <columns>copado__Duration_in_days__c</columns>
        <columns>copado__Scratch_Org_Definition_JSON__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Scratch Org Definitions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scratch Org Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>